--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,63 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <header>
+      <nav>
+            <a href="/">WebStudio</a>  
+            <ul>
+             <li><a href="">Студія</a></li>
+             <li><a href="">Портфоліо</a></li>
+             <li><a href="">Контакти</a></li>
+            </ul>
+            <ul>
+             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+             <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            </ul> 
+      </nav>
+  </header>
+  <section>
+     <h1>Ефективні рішення для вашого бізнесу</h1>
+     <button type="button">Замовити послугу</button>
+  </section>
+  <section>
+    <ul>
+        <li>
+         <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        </li>
+        <li>
+         <h2>ПУНКТУАЛЬНІСТЬ</h2>
+         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </li>
+        <li>
+         <h2>ПЛАНУВАННЯ</h2>
+         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+         <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+    </ul>
+  </section>
+  <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+            <li>
+             <a href="">
+              <img src="/images /img.jpg" alt="" width="370px" >
+             </a>
+            </li>
+            <li>
+             <a href="">
+             <img src="/images /img (1).jpg" alt="" width="370px">
+             </a>
+            </li>
+            <li>
+             <a href="">
+             <img src="/images /img (2).jpg" alt="" width="370px">
+             </a>
+            </li>
+        </ul>
+  </section>
 </body>
 </html>
