--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
              <li><a href="">Портфоліо</a></li>
              <li><a href="">Контакти</a></li>
             </ul>
-            <ul>
-             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-             <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-            </ul> 
-      </nav>
+     </nav>
+        <ul>
+         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul> 
+      
   </header>
-  <section>
+  <main>
+      <section>
      <h1>Ефективні рішення для вашого бізнесу</h1>
      <button type="button">Замовити послугу</button>
-  </section>
-  <section>
+      </section>
+      <section>
     <ul>
         <li>
          <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -44,26 +46,80 @@
          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
     </ul>
-  </section>
-  <section>
+      </section>
+      <section>
         <h2>Чим ми займаємося</h2>
         <ul>
             <li>
              <a href="">
-              <img src="/images /img.jpg" alt="" width="370px" >
+              <img src="/imagess/data.jpg" alt="Розробкою програм" width="370" >
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/images /img (1).jpg" alt="" width="370px">
+             <img src="/imagess/telefon.jpg" alt="Підлаштовуємо програми під телефонну версію" width="370">
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/images /img (2).jpg" alt="" width="370px">
+             <img src="/imagess/tablet.jpg" alt="Підлаштовуємо програми під планшет" width="370">
              </a>
             </li>
         </ul>
-  </section>
+      </section>
+      <section>
+    <h2>Наша команда</h2>
+    <ul>
+        <li>
+            <figure>
+             <img src="/imagess/ihor.jpg" alt="Ігор Дем'яненко
+             Product Designer" width="270">
+               <figcaption>
+                 <h3>Ігор Дем'яненко</h3>
+                 <p>Product Designer</p>
+               </figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+              <img src="/imagess/olha.jpg" alt="Ольга Рєпіна
+               Frontend Developer" width="270">
+              <figcaption>
+                 <h3>Ольга Рєпіна</h3>
+                 <p>Frontend Developer</p>
+              </figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+              <img src="/imagess/mykola.jpg" alt="Микола Тарасов
+              Marketing" width="270">
+               <figcaption>
+                 <h3>Микола Тарасов</h3>
+                 <p>Marketing</p>
+               </figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+             <img src="/imagess/myhailo.jpg" alt="Михайло Єрмаков
+             UI Designer" width="270">
+              <figcaption>
+                 <h3>Михайло Єрмаков</h3>
+                 <p>UI Designer</p>
+              </figcaption>
+            </figure>
+        </li>
+    </ul>
+      </section>
+  </main>
+  <footer>
+     <a href="/">WebStudio</a>
+      <ul>
+         <li><address>м. Київ, пр-т Лесі Українки, 26</address></li>
+         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+  </footer>
 </body>
 </html>
