--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
         <ul>
             <li>
              <a href="">
-              <img src="/imagess/data.jpg" alt="Розробкою програм" width="370" >
+              <img src="/images/data.jpg" alt="Розробкою програм" width="370" >
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/imagess/telefon.jpg" alt="Підлаштовуємо програми під телефонну версію" width="370">
+             <img src="/images/telefon.jpg" alt="Підлаштовуємо програми під телефонну версію" width="370">
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/imagess/tablet.jpg" alt="Підлаштовуємо програми під планшет" width="370">
+             <img src="/images/tablet.jpg" alt="Підлаштовуємо програми під планшет" width="370">
              </a>
             </li>
         </ul>
@@ -71,55 +71,41 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <figure>
-             <img src="/imagess/ihor.jpg" alt="Ігор Дем'яненко
-             Product Designer" width="270">
-               <figcaption>
-                 <h3>Ігор Дем'яненко</h3>
-                 <p>Product Designer</p>
-               </figcaption>
-            </figure>
+          <img src="/images/ihor.jpg" alt="Ігор Дем'яненко
+          Product Designer" width="270">
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+       <li>
+          <img src="/images/olha.jpg" alt="Ольга Рєпіна
+          Frontend Developer" width="270">
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+       </li>
+        <li>
+          <img src="/images/mykola.jpg" alt="Микола Тарасов
+          Marketing" width="270">
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
         </li>
         <li>
-            <figure>
-              <img src="/imagess/olha.jpg" alt="Ольга Рєпіна
-               Frontend Developer" width="270">
-              <figcaption>
-                 <h3>Ольга Рєпіна</h3>
-                 <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
-        </li>
-        <li>
-            <figure>
-              <img src="/imagess/mykola.jpg" alt="Микола Тарасов
-              Marketing" width="270">
-               <figcaption>
-                 <h3>Микола Тарасов</h3>
-                 <p>Marketing</p>
-               </figcaption>
-            </figure>
-        </li>
-        <li>
-            <figure>
-             <img src="/imagess/myhailo.jpg" alt="Михайло Єрмаков
-             UI Designer" width="270">
-              <figcaption>
-                 <h3>Михайло Єрмаков</h3>
-                 <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img src="/images/mykola.jpg" alt="Михайло Єрмаков
+            UI Designer" width="270">
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
         </li>
     </ul>
       </section>
   </main>
   <footer>
      <a href="/">WebStudio</a>
-      <ul>
-         <li><address>м. Київ, пр-т Лесі Українки, 26</address></li>
+      <address>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul>
          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        </ul>
+      </address>
   </footer>
 </body>
 </html>
