--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
         <ul>
             <li>
              <a href="">
-              <img src="/images/data.jpg" alt="Розробкою програм" width="370" >
+              <img src="images/img(8).jpg" alt="Розробкою програм" width="370" >
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/images/telefon.jpg" alt="Підлаштовуємо програми під телефонну версію" width="370">
+             <img src="images/img(9).jpg" alt="Підлаштовуємо програми під телефонну версію" width="370">
              </a>
             </li>
             <li>
              <a href="">
-             <img src="/images/tablet.jpg" alt="Підлаштовуємо програми під планшет" width="370">
+             <img src="images/img(10).jpg" alt="Підлаштовуємо програми під планшет" width="370">
              </a>
             </li>
         </ul>
@@ -71,25 +71,25 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-          <img src="/images/ihor.jpg" alt="Ігор Дем'яненко
+          <img src="images/img1.jpg" alt="Ігор Дем'яненко
           Product Designer" width="270">
           <h3>Ігор Дем'яненко</h3>
           <p>Product Designer</p>
         </li>
        <li>
-          <img src="/images/olha.jpg" alt="Ольга Рєпіна
+          <img src="images/img2.jpg" alt="Ольга Рєпіна
           Frontend Developer" width="270">
           <h3>Ольга Рєпіна</h3>
           <p>Frontend Developer</p>
        </li>
         <li>
-          <img src="/images/mykola.jpg" alt="Микола Тарасов
+          <img src="images/img3.jpg" alt="Микола Тарасов
           Marketing" width="270">
           <h3>Микола Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/mykola.jpg" alt="Михайло Єрмаков
+            <img src="images/img4.jpg" alt="Михайло Єрмаков
             UI Designer" width="270">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
